--- a/index.html
+++ b/index.html
@@ -91,13 +91,13 @@
                     <div>
                         <p>Add promo code</p>
                         
-                        <input class="form-control w-50 d-inline" type="text" name="" id="">
+                        <input id="promoInput" class="form-control w-50 d-inline" type="text" name="" id="">
 
-                        <button class="btn btn-danger">Apply</button>
+                        <button onclick="applyPromo()" class="btn btn-danger">Apply</button>
 
                         <hr>
 
-                        <h2>Total: $<span>1299</span></h2>
+                        <h2>Total: $<span id="bonusTotal">1299</spa></h2>
                     </div>
 
                 </div> 
